# MISIS_OOP_3_sem

./: .gitignore  CMakeLists.txt  README.md  codeforces.id
doc/: Doxyfile
doc/html/: index.html
prj.codeforces/: 1867a.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  CryptoArb.conf  README.md  run.sh
prj.cw/cmake/Modules/: FindSQLite3.cmake
prj.cw/doc/: Doxyfile
prj.cw/doc/html/: annotated.html  classes.html  classquote__t-members.html  classquote__t.html  dir_00a6ff62485250bea7c7e6a14cba6f48.html  dir_1f8882afbda89568b5cbd34099cfbe30.html  dir_4dd5a8c2d450bf35161efceab2bff362.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  index.html  parameters_8h_source.html  quote__t_8h_source.html  struct_balance-members.html  struct_balance.html  struct_parameters-members.html  struct_parameters.html
prj.cw/doc/html/search/: all_0.js  all_2.js  searchdata.js
prj.cw/src/: main.cpp  parameters.cpp  parameters.h  quote_t.h
prj.cw/src/coins/: BasicCoin.h  Bitcoin.h  Ethereum.h
prj.cw/src/exchanges/: BasicExchange.h  binance.cpp  binance.h  kraken.cpp  kraken.h
prj.cw/src/utils/: db_fun.cpp  hex_str.h  restapi.h  time_fun.cpp  time_fun.h  unique_json.h  unique_sqlite.h
src/: main.cpp
src/utils/: unique_json.h
